# -Agentic-SQL-Search

./: .env.example  .gitignore  README.md  agent.py  app.py  database.py  pyproject.toml  requirements.txt
skills/: sql.md
tests/: __init__.py  test_agent.py  test_database.py
